init angular universal + firebase

--- a/package.json
+++ b/package.json
@@ -5,7 +5,17 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "start:ssr": "npm run build && npm run serve:ssr",
+    "build": "ng build && npm run copy:hosting && npm run build:ssr && npm run build:functions",
+    "build:prod": "ng build --prod && npm run copy:hosting && npm run build:ssr && npm run build:functions",
+    "build:functions": "npm run --prefix functions build",
+    "build:ssr": "ng run ng-fire-universal:server && npm run webpack:ssr",
+    "copy:hosting": "cp -r ./dist/ng-fire-universal/* ./public && rm ./public/index.html",
+    "prerender:ssr": "PRERENDER=1 node dist/ng-fire-universal-webpack/server.js",
+    "serve:ssr": "node dist/ng-fire-universal-webpack/server.js",
+    "webpack:ssr": "webpack --config webpack.server.config.js",
+    "review": "npm run build:prod && firebase serve",
+    "deploy": "npm run build:prod && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -19,6 +29,7 @@
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/platform-server": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
@@ -29,10 +40,13 @@
     "@angular/cli": "~7.0.6",
     "@angular/compiler-cli": "~7.0.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
+    "@nguniversal/express-engine": "^7.0.2",
+    "@nguniversal/module-map-ngfactory-loader": "^7.0.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "express": "^4.16.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -41,8 +55,12 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-loader": "^5.3.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "typescript": "~3.1.6",
+    "webpack-cli": "^3.1.2",
+    "ws": "^6.1.2",
+    "xhr2": "^0.1.4"
   }
 }
