--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "prerender:ssr": "PRERENDER=1 node dist/ng-fire-universal-webpack/server.js",
     "serve:ssr": "node dist/ng-fire-universal-webpack/server.js",
     "webpack:ssr": "webpack --config webpack.server.config.js",
-    "review": "npm run build:prod && firebase serve",
-    "deploy": "npm run build:prod && firebase deploy",
+    "firebase:review": "npm run build:prod && firebase serve",
+    "firebase:deploy": "npm run build:prod && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -25,6 +25,7 @@
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/fire": "^5.1.1",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/platform-browser": "~7.0.0",
@@ -32,6 +33,7 @@
     "@angular/platform-server": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.6.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
