--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,10 @@
 
 # compiled output
 /dist
-/public
-/tmp
+/functions/dist/**/*
+/public/**/*
 /out-tsc
+/tmp
 /.firebase
 
 # dependencies
@@ -32,6 +33,7 @@
 /connect.lock
 /coverage
 /libpeerconnection.log
+firebase-debug.log
 npm-debug.log
 yarn-error.log
 testem.log
