--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "ng-fire-universal",
   "version": "0.8.0",
+  "repository": "https://github.com/jrodl3r/ng-fire-universal",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --host 0.0.0.0",
     "start:ssr": "npm run build && npm run serve:ssr",
     "build": "ng build && npm run copy:hosting && npm run build:ssr && npm run build:functions",
     "build:prod": "ng build --prod && npm run copy:hosting && npm run build:ssr && npm run build:functions",
     "build:functions": "npm run --prefix functions build",
     "build:ssr": "ng run ng-fire-universal:server && npm run webpack:ssr",
-    "copy:hosting": "rm -rf ./public && mkdir public && cp -r ./dist/ng-fire-universal/* ./public && rm ./public/index.html",
+    "copy:hosting": "rm -r ./public && mkdir public && cp -r ./dist/ng-fire-universal/* ./public && rm ./public/index.html",
     "serve:ssr": "node dist/ng-fire-universal-webpack/server.js",
     "webpack:ssr": "webpack --config webpack.server.config.js",
-    "firebase:review": "npm run build:prod && firebase serve",
+    "firebase:review": "npm run build:prod && firebase serve --host 0.0.0.0",
     "firebase:deploy": "npm run build:prod && firebase deploy",
     "test": "ng test",
     "lint": "ng lint",
@@ -31,7 +33,7 @@
     "@angular/platform-server": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
-    "firebase": "^5.6.0",
+    "firebase": "^5.7.0",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
