--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/platform-server": "~7.0.0",
+    "@angular/pwa": "^0.11.4",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
     "rxjs": "~6.3.3",
