--- a/angular.json
+++ b/angular.json
@@ -23,9 +23,10 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets",
-              "src/manifest.json"
+              "src/favicon.ico",
+              "src/manifest.json",
+              "src/robots.txt"
             ],
             "styles": [
               "src/styles.scss"
