--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular/service-worker": "~7.0.0",
     "core-js": "^2.5.4",
     "firebase": "^5.7.0",
+    "ngx-toastr": "^9.1.1",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26"
   },
