--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-fire-universal",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "repository": "https://github.com/jrodl3r/ng-fire-universal",
   "author": "John Rodler",
   "license": "MIT",
@@ -22,7 +22,10 @@
     "e2e": "ng e2e",
     "deploy": "gcloud app deploy",
     "deploy:functions": "firebase deploy --only functions",
-    "init:functions": "cd functions && npm i && cd .."
+    "install": "cd functions && npm i && cd .. && npm i && npm i -g firebase-tools",
+    "preview": "npm run build:ssr && npm run start",
+    "publish": "npm run build:ssr && npm run deploy && npm run deploy:functions",
+    "ship": "npm run build:ssr && npm run deploy"
   },
   "dependencies": {
     "@angular/animations": "~8.0.1",
@@ -34,7 +37,9 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/platform-server": "~8.0.1",
+    "@angular/pwa": "^0.802.0",
     "@angular/router": "~8.0.1",
+    "@angular/service-worker": "~8.0.1",
     "@nguniversal/express-engine": "^7.0.2",
     "@nguniversal/module-map-ngfactory-loader": "v7.0.2",
     "express": "^4.15.2",
