rev bump + minor layout, readme tweaks

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng-fire-universal",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "repository": "https://github.com/jrodl3r/ng-fire-universal",
   "author": "John Rodler",
   "license": "MIT",
@@ -22,7 +22,7 @@
     "e2e": "ng e2e",
     "deploy": "gcloud app deploy",
     "deploy:functions": "firebase deploy --only functions",
-    "install": "cd functions && npm i && cd .. && npm i && npm i -g firebase-tools",
+    "init": "npm i && npm i -g firebase-tools && cd functions && npm i && cd ..",
     "preview": "npm run build:ssr && npm run start",
     "publish": "npm run build:ssr && npm run deploy && npm run deploy:functions",
     "ship": "npm run build:ssr && npm run deploy"
