--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:watch": "ng test --watch",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "gcloud app deploy",
+    "deploy": "gcloud app deploy --project=ng-fire-universal",
     "deploy:functions": "firebase deploy --only functions",
     "init": "npm i && npm i -g firebase-tools && cd functions && npm i && cd ..",
     "preview": "npm run build:ssr && npm run start",
@@ -61,6 +61,7 @@
     "@types/node": "~8.9.4",
     "bufferutil": "^4.0.1",
     "codelyzer": "^5.0.0",
+    "first-input-delay": "^0.1.3",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
     "jest": "^24.8.0",
