--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "deploy": "gcloud app deploy --project=ng-fire-universal",
-    "deploy:functions": "firebase deploy --only functions",
+    "deploy:functions": "firebase deploy --only functions --project=ng-fire-universal",
     "init": "npm i && npm i -g firebase-tools && cd functions && npm i && cd ..",
     "preview": "npm run build:ssr && npm run start",
-    "publish": "npm run build:ssr && npm run deploy && npm run deploy:functions",
-    "ship": "npm run build:ssr && npm run deploy"
+    "ship": "npm run build:ssr && npm run deploy",
+    "ship:all": "npm run build:ssr && npm run deploy && npm run deploy:functions"
   },
   "dependencies": {
     "@angular/animations": "~8.0.1",
