--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "test:watch": "ng test --watch",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "deploy": "gcloud app deploy --project=ng-fire-universal",
-    "deploy:functions": "firebase deploy --only functions --project=ng-fire-universal",
+    "deploy": "gcloud app deploy",
+    "deploy:functions": "firebase deploy --only functions",
     "init": "npm i && npm i -g firebase-tools && cd functions && npm i && cd ..",
     "preview": "npm run build:ssr && npm run start",
     "ship": "npm run build:ssr && npm run deploy",
