--- a/package.json
+++ b/package.json
@@ -28,51 +28,51 @@
     "ship:all": "npm run build:ssr && npm run deploy && npm run deploy:functions"
   },
   "dependencies": {
-    "@angular/animations": "~8.0.1",
-    "@angular/common": "~8.0.1",
-    "@angular/compiler": "~8.0.1",
-    "@angular/core": "~8.0.1",
+    "@angular/animations": "~8.2.11",
+    "@angular/common": "~8.2.11",
+    "@angular/compiler": "~8.2.11",
+    "@angular/core": "~8.2.11",
     "@angular/fire": "^5.2.1",
-    "@angular/forms": "~8.0.1",
-    "@angular/platform-browser": "~8.0.1",
-    "@angular/platform-browser-dynamic": "~8.0.1",
-    "@angular/platform-server": "~8.0.1",
-    "@angular/pwa": "^0.802.0",
-    "@angular/router": "~8.0.1",
-    "@angular/service-worker": "~8.0.1",
-    "@nguniversal/express-engine": "^7.0.2",
-    "@nguniversal/module-map-ngfactory-loader": "v7.0.2",
-    "express": "^4.15.2",
-    "firebase": "^6.2.2",
-    "ngx-toastr": "^10.0.4",
-    "rxjs": "~6.5.2",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "@angular/forms": "~8.2.11",
+    "@angular/platform-browser": "~8.2.11",
+    "@angular/platform-browser-dynamic": "~8.2.11",
+    "@angular/platform-server": "~8.2.11",
+    "@angular/pwa": "^0.803.12",
+    "@angular/router": "~8.2.11",
+    "@angular/service-worker": "~8.2.11",
+    "@nguniversal/express-engine": "^8.1.1",
+    "@nguniversal/module-map-ngfactory-loader": "v8.1.1",
+    "express": "^4.17.1",
+    "firebase": "^7.2.1",
+    "ngx-toastr": "^11.1.2",
+    "rxjs": "~6.5.3",
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-builders/jest": "^8.0.3",
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.4",
-    "@angular/compiler-cli": "~8.0.1",
-    "@angular/language-service": "~8.0.1",
-    "@types/jasmine": "^3.3.13",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/jest": "^24.0.15",
-    "@types/node": "~8.9.4",
+    "@angular-builders/jest": "^8.2.0",
+    "@angular-devkit/build-angular": "~0.803.12",
+    "@angular/cli": "~8.3.12",
+    "@angular/compiler-cli": "~8.2.11",
+    "@angular/language-service": "~8.2.11",
+    "@types/jasmine": "^3.4.4",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jest": "^24.0.19",
+    "@types/node": "~12.11.1",
     "bufferutil": "^4.0.1",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.1.2",
     "first-input-delay": "^0.1.3",
-    "jasmine-core": "^3.4.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "jest": "^24.8.0",
-    "protractor": "~5.4.0",
-    "ts-loader": "^5.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3",
+    "jest": "^24.9.0",
+    "protractor": "~5.4.2",
+    "ts-loader": "^6.2.0",
+    "ts-node": "~8.4.1",
+    "tslint": "~5.20.0",
+    "typescript": "^3.5.3",
     "utf-8-validate": "^5.0.2",
-    "webpack-cli": "^3.1.0",
-    "ws": "^7.0.1",
+    "webpack-cli": "^3.3.9",
+    "ws": "^7.1.2",
     "xhr2": "^0.2.0"
   }
 }
